refactor: reorganize dto package structure
